samples/_failures_safe/1761536361_6675f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdf0fc00.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_bdf0fc00.c:163:20: error: missing terminating " character
  163 |             printf("Node %d: distance %
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bdf0fc00.c:163:13: error: expected expression at end of input
  163 |             printf("Node %d: distance %
      |             ^~~~~~
./samples/SAFE/__tmp_bdf0fc00.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdf0fc00.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdf0fc00.c:163:13: error: expected declaration or statement at end of input
